# cpp-labs

hw-01_bmp/: Makefile
hw-01_bmp/include/: bmp.h  stego.h
hw-01_bmp/src/: bmp.c  main.c  stego.c
hw-02_huffman/: CMakeLists.txt
hw-02_huffman/include/: archiver.h  bin_manip.h  code.h  huffman.h  node.h  reader.h  tree.h  writer.h
hw-02_huffman/sample/: test.in
hw-02_huffman/src/: archiver.cpp  bin_manip.cpp  code.cpp  huffman.cpp  main.cpp  node.cpp  reader.cpp  tree.cpp  writer.cpp
hw-02_huffman/test/: CMakeLists.txt  doctest.h  test_data_processing.cpp  test_huffman.cpp
lab-01_makefile/: .gitignore  Makefile  SOLUTION.md
lab-01_makefile/include/: algorithm.h  util.h
lab-01_makefile/src/: algorithm.c  io.c  main.c  util.c
lab-02_cstrings/: .gitignore  Makefile
lab-02_cstrings/include/: str.h  test_str.h
lab-02_cstrings/src/: str.c  test.c  test_str.c
lab-03_mergesort/: Makefile
lab-03_mergesort/include/: mergesort.h
lab-03_mergesort/src/: main.c  mergesort.c
lab-04_intrusive-list/: Makefile
lab-04_intrusive-list/include/: clist.h
lab-04_intrusive-list/src/: clist.c  main.c
lab-05_c-io/: .gitignore  Makefile
lab-05_c-io/include/: clist.h  point_list.h
lab-05_c-io/src/: clist.c  main.c  point_list.c
lab-06_int-vector/: CMakeLists.txt
lab-06_int-vector/include/: my_vector.hpp
lab-06_int-vector/src/: my_vector.cpp
lab-07_matrix/: CMakeLists.txt
lab-07_matrix/include/: matrix.h
lab-07_matrix/src/: matrix.cpp
lab-08_shared-ptr/: CMakeLists.txt
lab-08_shared-ptr/include/: matrix.hpp  shared_ptr.hpp
lab-09_figures/: CMakeLists.txt
lab-10_cppio/: CMakeLists.txt  README.md
lab-10_cppio/include/: bin_manip.h  employees.h
lab-10_cppio/src/: bin_manip.cpp  employees.cpp  main.cpp
lab-11_vector/: CMakeLists.txt
lab-12_exceptions/: CMakeLists.txt
lab-13_array/: CMakeLists.txt
lab-14_linq/: CMakeLists.txt
lab-14_linq/include/: linq.hpp
(+17 files in other folders)
